remove privacy policy underline

--- a/privacy policy.html
+++ b/privacy policy.html
@@ -195,8 +195,8 @@
                   }
 
                   span.s3 {
-                      text-decoration: underline;
-                      font-kerning: none
+                      /*text-decoration: underline;*/
+                      /*font-kerning: none*/
                   }
 
                   span.s4 {
@@ -214,7 +214,7 @@
                   }
 
                   span.s7 {
-                      text-decoration: underline;
+                      /*text-decoration: underline;*/
                       font-kerning: none;
                       color: #000000
                   }
@@ -303,7 +303,7 @@
                           <tbody>
                           <tr style="width:100%; height:20px;">
                               <td align="center" valign="middle"><a href="terms%20condition.html">Standard Terms & Conditions of Sale</a><span class="bottomNavDivider">|</span></td>
-                              <td align="center" valign="middle"><a href="privacy%20policy.html">Pravicy Policy</a><span class="bottomNavDivider">|</span></td>
+                              <td align="center" valign="middle"><a href="privacy%20policy.html">Privacy Policy</a><span class="bottomNavDivider">|</span></td>
                               <td align="center" valign="middle"><a href="index.html#contact">Contact Us</a><span class="bottomNavDivider">|</span></td>
                               <!--                              <td align="center" valign="middle"><a href="https://www.eastman.com/Pages/Site_Index.aspx">Copyright 2020 Lyne Chemicals Limited</a><span class="bottomNavDivider">|</span></td>-->
                           </tr>
