--- a/privacy policy.html
+++ b/privacy policy.html
@@ -100,7 +100,8 @@
                       margin: 0.0px 0.0px 8.0px 0.0px;
                       text-align: justify;
                       font: 20.0px Helvetica;
-                      color: #355ab7
+                      color: #355ab7;
+                      font-weight: bold;
                   }
 
                   p.p4 {
@@ -197,6 +198,9 @@
                   span.s3 {
                       /*text-decoration: underline;*/
                       /*font-kerning: none*/
+                      font-weight: bold;
+
+
                   }
 
                   span.s4 {
