--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 col-lg-8 mb-5">
-            <form action="https://formspree.io/xzbjpwea" method="POST" class="p-5 bg-white">
+            <form onkeydown="return event.key != 'Enter';"action="https://formspree.io/xzbjpwea" method="POST" class="p-5 bg-white">
 
               <div class="row form-group">
               <div class="col-md-12 mb-3 mb-md-0">
