add product page, repleced the home image

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Lyne Chemicals</title>
+    <title>普特健康</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="google-site-verification" content="r0nfYZHV9O-QTZBAqdox-w8kRFlKox4IyqfwUTxMLDg" />
@@ -58,8 +58,8 @@
                                 <ul class="site-menu">
                                     <li class="active"><a href="#home">首页</a></li>
                                     <li><a href="#about">关于我们</a></li>
-                                    <li><a href="#services">产品简介</a></li>
-                                    <li><a href="#culture">知识论坛</a></li>
+                                    <li><a href="#product">产品简介</a></li>
+                                    <li><a href="#knowledge">知识论坛</a></li>
                                     <li><a href="#contact">联系我们</a></li>
                                 </ul>
                             </div>
@@ -77,7 +77,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-7 main_page_black">
-                        <h2 style="color:white; font-size: 45px">保健品</h2>
+                        <h2 style="color:white; font-size: 45px">遇见即美好</h2>
                     </div>
                 </div>
             </div>
@@ -88,29 +88,29 @@
             <div class="container">
                 <div class="row">
                     <div style=" margin-left: 35px; margin-top: 20%">
-                        <h2 style="color: white; font-size: 45px;">深海鱼油</h2>
+                        <h2 style="color: white; font-size: 45px;">满怀理想，崇尚创新，追求极致，奋发拼搏 </h2>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="site-blocks-cover inner-page overlay" style="background-image: url(images/section_main_4.jpg);"
-             data-aos="fade" data-stellar-background-ratio="0.5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12" style="color: white; margin-left: 20px; margin-top: 20%">
-                        <h2 style="color: white; font-size: 45px;">姜黄素软糖</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
+<!--        <div class="site-blocks-cover inner-page overlay" style="background-image: url(images/section_main_4.jpg);"-->
+<!--             data-aos="fade" data-stellar-background-ratio="0.5">-->
+<!--            <div class="container">-->
+<!--                <div class="row">-->
+<!--                    <div class="col-md-12" style="color: white; margin-left: 20px; margin-top: 20%">-->
+<!--                        <h2 style="color: white; font-size: 45px;">姜黄素软糖</h2>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
         <div class="site-blocks-cover inner-page" style="background-image: url(images/section_main_5.jpg);"
              data-aos="fade" data-stellar-background-ratio="0.5">
             <div class="container">
                 <div class="row">
                     <div class="main_page_ice">
-                        <h2 style="color: white; font-size: 45px">益生菌</h2>
+                        <h2 style="color: white; font-size: 35px">每一件与众不同的产品，每一个激动人心的时刻，都是以无比的勤奋为前提，以消费者的真实感受为依托 </h2>
                     </div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
             <div class="container">
                 <div class="row">
                     <div style="margin-left: 40px; margin-top: 35%">
-                        <h2 style="color: white; font-size: 45px">番茄红素</h2>
+                        <h2 style="color: white; font-size: 45px">汇聚天然营养，优选核心科技，共享品质生活</h2>
                     </div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
     </div>
 
     <div>
-        <div class="container first-section" id="culture">
+        <div class="container first-section" id="product">
             <div class="row">
                 <div class="col-md-12 text-center">
                     <span class="caption d-block mb-2 font-secondary font-weight-bold">保健品&营养品</span>
@@ -177,32 +177,30 @@
                         <div class="media-image">
                             <img src="images/trust.jpg" alt="Image" class="img-fluid">
                             <div class="media-image-body">
-                                <h2 class="font-secondary text-uppercase">Trust & Honesty</h2>
-                                <p>Our actions match our words. We are trustworthy in all relationships.</p>
+                                <a href="product-tomato.html"><h2 class="font-secondary text-uppercase">番茄红素</h2></a>
+                                <p>以海洋鱼类中提取的鱼油为原料，采用挪威PronovaPure高含量鱼油经过先进工艺精制而成。含有的人体必需Omega-3系多不饱和脂肪酸EPA和 DHA</p>
                             </div>
                         </div>
                         <div class="media-image">
                             <img src="images/teamwork.jpg" alt="Image" class="img-fluid">
                             <div class="media-image-body">
-                                <h2 class="font-secondary text-uppercase">Diversity & Teamwork</h2>
-                                <p>We create an open and inclusive environment for everyone to work their best way. Our
-                                    team values good communication and sharing the same vision for our future.</p>
+                                <a href="product-fish.html"><h2 class="font-secondary text-uppercase">百家康牌鱼油胶囊</h2></a>
+                                <p>以海洋鱼类中提取的鱼油为原料，采用挪威PronovaPure高含量鱼油经过先进工艺精制而成。含有的人体必需Omega-3系多不饱和脂肪酸EPA和 DHA</p>
                             </div>
                         </div>
-                        <div class="media-image">
-                            <img src="images/innovation.jpg" alt="Image" class="img-fluid">
-                            <div class="media-image-body">
-                                <h2 class="font-secondary text-uppercase">Agility & Innovation</h2>
-                                <p>We respond quickly to changes and seize new opportunities. Being creative,
-                                    open-minded and sharing new ideas freely is key to our success.</p>
-                            </div>
-                        </div>
+<!--                        <div class="media-image">-->
+<!--                            <img src="images/innovation.jpg" alt="Image" class="img-fluid">-->
+<!--                            <div class="media-image-body">-->
+<!--                                <h2 class="font-secondary text-uppercase">Agility & Innovation</h2>-->
+<!--                                <p>We respond quickly to changes and seize new opportunities. Being creative,-->
+<!--                                    open-minded and sharing new ideas freely is key to our success.</p>-->
+<!--                            </div>-->
+<!--                        </div>-->
                         <div class="media-image">
                             <img src="images/respect.jpg" alt="Image" class="img-fluid">
                             <div class="media-image-body">
-                                <h2 class="font-secondary text-uppercase">Respect & Dedication</h2>
-                                <p>We show consideration for others and treat each other with dignity. We are dedicated
-                                    to play our part in improving human health and wellbeing.</p>
+                                <a href="product-suger.html"><h2 class="font-secondary text-uppercase">姜黄素爆汁软糖</h2></a>
+                                <p>姜黄植物来自东南亚，已有数千年的历史，被用作天然的消化助剂和烹饪香料。像姜一样，它来自姜科，它的健康益处来自其根。</p>
                             </div>
                         </div>
                     </div>
@@ -212,7 +210,7 @@
     </div>
 
     <!-- E module-full-screen --><!-- Start_Module_332508 --><a name="28031" id="28031"></a><!-- S module-full-screen -->
-    <div class="module-full-screen site-section" style="">
+    <div class="module-full-screen site-section" id="knowledge">
         <div class="module-inner not-animated container" data-animate="fadeInUp" data-delay="200">
             <div class="page-width">
                 <div class="row mb-5">
