--- a/gallery.html
+++ b/gallery.html
@@ -70,13 +70,13 @@
                         <li><a href="testimonials.html">Testimonials</a></li>
                         <li class="active"><a href="gallery.html">Gallery</a></li>
                         <li><a href="privacy%20policy.html">FAQ</a></li>
-                        <li><a href="why-choose-us.html">Why Choose Us</a></li>
+                        <li><a href="product-suger.html">Why Choose Us</a></li>
                         <li class="has-children">
                           <a href="#">Sub Menus</a>
                           <ul class="dropdown">
                             <li><a href="testimonials.html">Testimonials</a></li>
                             <li><a href="gallery.html">Gallery</a></li>
-                            <li><a href="why-choose-us.html">Why Choose Us</a></li>
+                            <li><a href="product-suger.html">Why Choose Us</a></li>
                           </ul>
                         </li>
                       </ul>
