repalced te mainpage pictures

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
             <div class="container">
                 <div class="row">
                     <div style=" margin-left: 35px; margin-top: 20%">
-                        <h2 style="color: white; font-size: 45px;">满怀理想，崇尚创新，追求极致，奋发拼搏 </h2>
+                        <h2 style="color: white; font-size: 45px;">满怀理想，崇尚创新，追求极致 </h2>
+                        <h2 style="color: white; font-size: 45px;">奋发拼搏 </h2>
                     </div>
                 </div>
             </div>
@@ -110,7 +111,9 @@
             <div class="container">
                 <div class="row">
                     <div class="main_page_ice">
-                        <h2 style="color: white; font-size: 35px">每一件与众不同的产品，每一个激动人心的时刻，都是以无比的勤奋为前提，以消费者的真实感受为依托 </h2>
+                        <h2 style="color: black; font-size: 35px">每一件与众不同的产品，每一个激动人心的时刻 </h2>
+                        <h2 style="color: black; font-size: 35px">都是以无比的勤奋为前提，以消费者的真实感受为依托 </h2>
+
                     </div>
                 </div>
             </div>
@@ -121,7 +124,8 @@
             <div class="container">
                 <div class="row">
                     <div style="margin-left: 40px; margin-top: 35%">
-                        <h2 style="color: white; font-size: 45px">汇聚天然营养，优选核心科技，共享品质生活</h2>
+                        <h2 style="color: white; font-size: 45px">汇聚天然营养，优选核心科技</h2>
+                        <h2 style="color: white; font-size: 45px">共享品质生活</h2>
                     </div>
                 </div>
             </div>
@@ -132,7 +136,7 @@
     <!--    <div class="slant-1"></div>-->
 
     <div class="site-half first-section" id="about">
-        <div class="img-bg-1" style="background-image: url('images/whoweare.jpg');" data-aos="fade"></div>
+        <div class="img-bg-1" style="background-image: url('images/whatwedo.jpg');" data-aos="fade"></div>
         <div class="container">
             <div class="row no-gutters align-items-stretch">
                 <div class="col-lg-5 ml-lg-auto py-5">
@@ -141,27 +145,29 @@
                     <p>北京普泰康医药科技有限公司作为北京凤礼精求医药股份有限公司的全资子公司成立于2017年3月，位于北京经济技术开发区。</p>
                     <p>她满怀理想，崇尚创新，追求极致，奋发拼搏。秉持 “汇聚天然营养，优选核心科技，共享品质生活” 的经营理念，通过多元化的产品与服务为消费者提供全面的营养健康与关爱。</p>
                     <p> 二十年来凤礼精求与全球众多知名品牌的食品、药品原辅料生产商建立了长期友好的战略合作关系，依托凤礼精求强大的供应商体系与技术支持，普泰康将致力于，满足食品及保健食品、膳食营养补充剂、特殊医学营养食品及化妆品等日益增长的需求以及新的药物传递系统的引进与推广。</p>
+                    <p>目前已研制及即将上市的产品如：高含量鱼油软胶囊、番茄红素维生素E软胶囊、姜黄素爆汁软糖、益生菌固体饮料、植物蛋白及浓缩乳清蛋白粉、干细胞超级护理安瓿等。</p>
+                    <p>她将赋予每一个消费者更高的生活品质。尊重健康，成就美好，未来让我们看到你与世界更美的样子。</p>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="site-half block">
-        <div class="img-bg-1 right" style="background-image: url('images/whatwedo.jpg');" data-aos="fade"></div>
-        <div class="container">
-            <div class="row no-gutters align-items-stretch">
-                <div class="col-lg-5 mr-lg-auto py-5">
-                    <span class="caption d-block mb-2 font-secondary font-weight-bold">贸易&产品</span>
-                    <h2 class="site-section-heading text-uppercase font-secondary mb-5 ">我们做什么？</h2>
-                    <p>目前已研制及即将上市的产品如：高含量鱼油软胶囊、番茄红素维生素E软胶囊、姜黄素爆汁软糖、益生菌固体饮料、植物蛋白及浓缩乳清蛋白粉、干细胞超级护理安瓿等。</p>
-                    <p>她将赋予每一个消费者更高的生活品质。尊重健康，成就美好，未来让我们看到你与世界更美的样子。</p>
-                    <p>目前已研制及即将上市的产品如：高含量鱼油软胶囊、番茄红素维生素E软胶囊、姜黄素爆汁软糖、益生菌固体饮料、植物蛋白及浓缩乳清蛋白粉、干细胞超级护理安瓿等。</p>
-                    <p>目前已研制及即将上市的产品如：高含量鱼油软胶囊、番茄红素维生素E软胶囊、姜黄素爆汁软糖、益生菌固体饮料、植物蛋白及浓缩乳清蛋白粉、干细胞超级护理安瓿等。</p>
-                    <p>目前已研制及即将上市的产品如：高含量鱼油软胶囊、番茄红素维生素E软胶囊、姜黄素爆汁软糖、益生菌固体饮料、植物蛋白及浓缩乳清蛋白粉、干细胞超级护理安瓿等。</p>
-                </div>
-            </div>
-        </div>
-    </div>
+<!--    <div class="site-half block">-->
+<!--        <div class="img-bg-1 right" style="background-image: url('images/whatwedo.jpg');" data-aos="fade"></div>-->
+<!--        <div class="container">-->
+<!--            <div class="row no-gutters align-items-stretch">-->
+<!--                <div class="col-lg-5 mr-lg-auto py-5">-->
+<!--                    <span class="caption d-block mb-2 font-secondary font-weight-bold">贸易&产品</span>-->
+<!--                    <h2 class="site-section-heading text-uppercase font-secondary mb-5 ">我们做什么？</h2>-->
+<!--                    <p>目前已研制及即将上市的产品如：高含量鱼油软胶囊、番茄红素维生素E软胶囊、姜黄素爆汁软糖、益生菌固体饮料、植物蛋白及浓缩乳清蛋白粉、干细胞超级护理安瓿等。</p>-->
+<!--                    <p>她将赋予每一个消费者更高的生活品质。尊重健康，成就美好，未来让我们看到你与世界更美的样子。</p>-->
+<!--                    <p>目前已研制及即将上市的产品如：高含量鱼油软胶囊、番茄红素维生素E软胶囊、姜黄素爆汁软糖、益生菌固体饮料、植物蛋白及浓缩乳清蛋白粉、干细胞超级护理安瓿等。</p>-->
+<!--                    <p>目前已研制及即将上市的产品如：高含量鱼油软胶囊、番茄红素维生素E软胶囊、姜黄素爆汁软糖、益生菌固体饮料、植物蛋白及浓缩乳清蛋白粉、干细胞超级护理安瓿等。</p>-->
+<!--                    <p>目前已研制及即将上市的产品如：高含量鱼油软胶囊、番茄红素维生素E软胶囊、姜黄素爆汁软糖、益生菌固体饮料、植物蛋白及浓缩乳清蛋白粉、干细胞超级护理安瓿等。</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
     <div>
         <div class="container first-section" id="product">
