updated the theme color, fixed small bugs

--- a/product-fish.html
+++ b/product-fish.html
@@ -51,7 +51,7 @@
             <div class="site-navbar bg-light">
                 <div class="row align-items-center">
                     <div class="col-2" style="margin-bottom: 20px; margin-top: 20px ">
-                        <img src="images/logo-small.jpg" alt="Image" class="img-fluid">
+                        <a href="index.html#home"><img src="images/logo-small.jpg" alt="Image" class="img-fluid"></a>
                         <!--              <h2 class="mb-0 site-logo"><a href="index.html" class="font-weight-bold text-uppercase">Lyne Chemicals</a></h2>-->
                     </div>
                     <div class="col-10">
@@ -62,11 +62,10 @@
                                         class="icon-menu h3"></span></a></div>
 
                                 <ul class="site-menu js-clone-nav d-none d-lg-block">
-                                    <li><a href="index.html#home">Home</a></li>
-                                    <li><a href="index.html#about">About</a></li>
-                                    <li><a href="index.html#services">Services</a></li>
-                                    <li><a href="index.html#culture">Values</a></li>
-                                    <li><a href="index.html#contact">Contact</a></li>
+                                    <li><a href="index.html#about">关于我们</a></li>
+                                    <li><a href="index.html#product">产品简介</a></li>
+                                    <li><a href="index.html#knowledge">知识论坛</a></li>
+                                    <li><a href="index.html#contact">联系我们</a></li>
                                 </ul>
                             </div>
                         </nav>
