update(index):补充联系我们 cn & en

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
                             <div class="row form-group form2">
                                 <div class="col-md-12 mb-3 mb-md-0">
-                                    <label class="font-weight-bold" for="companyname">公司名称</label>
+                                    <label class="font-weight-bold contact-label" for="companyname">公司名称</label>
                                     <input type="text" name="company name" id="companyname" class="form-control"
                                         placeholder="请输入公司名称">
                                 </div>
@@ -358,7 +358,7 @@
 
                             <div class="row form-group form3">
                                 <div class="col-md-12">
-                                    <label class="font-weight-bold" for="email">邮件</label>
+                                    <label class="font-weight-bold contact-label" for="email">邮件</label>
                                     <input type="email" name="email_replyto" id="email" class="form-control"
                                         placeholder="exmaple@126.com">
                                 </div>
@@ -367,7 +367,7 @@
 
                             <div class="row form-group form4">
                                 <div class="col-md-12 mb-3 mb-md-0">
-                                    <label class="font-weight-bold" for="phone">电话</label>
+                                    <label class="font-weight-bold contact-label" for="phone">电话</label>
                                     <input type="text" name="phone" id="phone" class="form-control"
                                         placeholder="13888888888">
                                 </div>
@@ -375,7 +375,7 @@
 
                             <div class="row form-group form5">
                                 <div class="col-md-12 mb-3 mb-md-0">
-                                    <label class="font-weight-bold" for="address">地址</label>
+                                    <label class="font-weight-bold contact-label" for="address">地址</label>
                                     <input type="text" name="address" id="address" class="form-control"
                                         placeholder="请输入地址">
                                 </div>
@@ -383,7 +383,7 @@
 
                             <div class="row form-group form6">
                                 <div class="col-md-12">
-                                    <label class="font-weight-bold" for="message">内容</label>
+                                    <label class="font-weight-bold contact-label" for="message">内容</label>
                                     <textarea name="message" id="message" cols="30" rows="5" class="form-control"
                                         placeholder="请输入您想要咨询的内容"></textarea>
                                 </div>
@@ -393,13 +393,14 @@
                                 <div class="col-md-12">
                                     <input type="submit" value="发送"
                                         class="btn btn-primary text-white px-4 py-2 sendbtn contact-subumit">
+
                                 </div>
                             </div>
                         </form>
                     </div>
 
                     <div class="col-lg-4">
-                        <div class="p-4 mb-3 bg-white contact-info">
+                        <div class="p-4 mb-3 bg-white contact-addressinfor">
                             <h3 class="h5 text-black mb-3">联系信息：</h3>
                             <p class="mb-4">北京经济技术开发区，科创13街31号院2区，15号楼401-1室</p>
                             <p class="mb-0">E: enquiry@lynechemicals.com</a></p>
