--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="main_page_ice puthealthbanner3">
-                            <h2 style="color: black; font-size: 35px">每一件与众不同的产品，每一个激动人心的时刻,都是以无比的勤奋为前提，以消费者的真实感受为依托
+                            <h2 style="color:#fff; font-size: 45px">每一件与众不同的产品，每一个激动人心的时刻,都是以无比的勤奋为前提，以消费者的真实感受为依托
                             </h2>
                         </div>
                     </div>
