adjust(index):banner

--- a/index.html
+++ b/index.html
@@ -99,7 +99,15 @@
                 <div class="container">
                     <div class="row">
                         <div style=" margin-left: 35px; margin-top: 20%" class="puthealthbanner2">
-                            <h2 style="color: white; font-size: 45px;">满怀理想，崇尚创新，追求极致,奋发拼搏 </h2>
+                            <h2 style="color: white; font-size: 45px; writing-mode:vertical-lr; letter-spacing:10px">
+                                <span>满怀理想</span>
+                                <br />
+                                <span>崇尚创新</span>
+                                <br />
+                                <span>追求极致</span>
+                                <br />
+                                <span>奋发拼搏</span>
+                            </h2>
                         </div>
                     </div>
                 </div>
