adjust(index):banner

--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
                 data-aos="fade" data-stellar-background-ratio="0.5">
                 <div class="container">
                     <div class="row">
-                        <div style=" margin-left: 35px; margin-top: 20%" class="puthealthbanner2">
-                            <h2 style="color: white; font-size: 45px; writing-mode:vertical-lr; letter-spacing:10px">
-                                <span>满怀理想</span>
+                        <div style=" margin-left: 65px; margin-top: 20%" class="puthealthbanner2">
+                            <h2 class="puthealthbanner2-box" style="color: white; font-size: 45px; letter-spacing:10px">
+                                <span class="puthealthbanner2-desc desc1">满怀理想</span>
                                 <br />
-                                <span>崇尚创新</span>
+                                <span class="puthealthbanner2-desc desc2">崇尚创新</span>
                                 <br />
-                                <span>追求极致</span>
+                                <span class="puthealthbanner2-desc desc3">追求极致</span>
                                 <br />
-                                <span>奋发拼搏</span>
+                                <span class="puthealthbanner2-desc desc4">奋发拼搏</span>
                             </h2>
                         </div>
                     </div>
@@ -140,7 +140,7 @@
                 data-aos="fade" data-stellar-background-ratio="0.5">
                 <div class="container">
                     <div class="row">
-                        <div style="margin-left: 40px; margin-top: 35%" class="puthealthbanner4">
+                        <div class="main_page_nutrition puthealthbanner4">
                             <h2 style="color: white; font-size: 45px">汇聚天然营养，优选核心科技,共享品质生活</h2>
                         </div>
                     </div>
