--- a/product-tomato.html
+++ b/product-tomato.html
@@ -127,19 +127,27 @@
                 </div>
 
                 <div class="product-box">
-                    <div class="swiper-container" id="swiper-tomato">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <img src="images/trust.jpg" alt="Image" class="img-fluid">
+                    <div class="product-swiper">
+                        <div class="swiper-container" id="swiper-tomato">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <img src="images/trust.jpg" alt="Image" class="img-fluid">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="images/teamwork.jpg" alt="Image" class="img-fluid">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="images/respect.jpg" alt="Image" class="img-fluid">
+                                </div>
                             </div>
-                            <div class="swiper-slide">
-                                <img src="images/teamwork.jpg" alt="Image" class="img-fluid">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="images/respect.jpg" alt="Image" class="img-fluid">
-                            </div>
+                            <div class="swiper-button-prev  swiper-button-black"></div>
+                            <!--左箭头。如果放置在swiper-container外面，需要自定义样式。-->
+                            <div class="swiper-button-next  swiper-button-black"></div>
+                            <!--右箭头。如果放置在swiper-container外面，需要自定义样式。-->
+                            <div class="swiper-pagination"></div>
                         </div>
                     </div>
+
                     <div class="product-instructions">
                         <p
                             style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 18px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 800; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
