--- a/product-suger.html
+++ b/product-suger.html
@@ -63,10 +63,10 @@
 								<div class="container">
 									<ul class="site-menu">
 										<li class="active"><a href="index.html">首页</a></li>
-										<li><a href="#about">关于我们</a></li>
-										<li><a href="#product">产品简介</a></li>
-										<li><a href="#knowledge">知识论坛</a></li>
-										<li><a href="#contact">联系我们</a></li>
+										<li><a href="index.html">关于我们</a></li>
+										<li><a href="index.html">产品简介</a></li>
+										<li><a href="index.html">知识论坛</a></li>
+										<li><a href="index.html">联系我们</a></li>
 									</ul>
 									<button id="btnGroupDrop1" type="button"
 										class="btn btn-light btn-sm dropdown-toggle" data-toggle="dropdown"
@@ -264,6 +264,14 @@
 
 	<script src="js/main.js"></script>
 	<script src="js/language.js"></script>
+	<script>
+		if (language && language === "en") {
+			getlanguageJson("./language/products_suger_en.json", translateProductsPages);
+
+		} else {
+			getlanguageJson("./language/products_suger_cn.json", translateProductsPages);
+		}
+	</script>
 
 </body>
 
