--- a/product-suger.html
+++ b/product-suger.html
@@ -55,27 +55,24 @@
 				<div class="site-navbar bg-light">
 					<div class="row align-items-center">
 						<div class="col-2" style="margin-bottom: 20px; margin-top: 20px ">
-							<img src="images/logo-small.jpg" alt="Image" class="img-fluid">
+							<a href="index.html#home"><img src="images/logo-small.jpg" alt="Image"
+									class="img-fluid"></a>
 							<!--              <h2 class="mb-0 site-logo"><a href="index.html" class="font-weight-bold text-uppercase">Lyne Chemicals</a></h2>-->
 						</div>
 						<div class="col-10">
 							<nav class="site-navigation text-right" role="navigation">
 								<div class="container">
 									<ul class="site-menu">
-										<li class="active"><a href="index.html">首页</a></li>
-										<li><a href="index.html">关于我们</a></li>
-										<li><a href="index.html">产品简介</a></li>
-										<li><a href="index.html">知识论坛</a></li>
-										<li><a href="index.html">联系我们</a></li>
+										<li><a href="index.html">首页</a></li>
+										<li><a href="index.html#about">关于我们</a></li>
+										<li class="active"><a href="index.html#product">产品简介</a></li>
+										<li><a href="index.html#knowledge">知识论坛</a></li>
+										<li><a href="index.html#contact">联系我们</a></li>
 									</ul>
-									<button id="btnGroupDrop1" type="button"
-										class="btn btn-light btn-sm dropdown-toggle" data-toggle="dropdown"
-										aria-haspopup="true" aria-expanded="false">
-										🇨🇳中文
-									</button>
-									<div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-										<a class="dropdown-item language-cn" href="#">🇨🇳 中文</a>
-										<a class="dropdown-item language-en" href="#">🇬🇧 Enlish</a>
+									<div class="setting-language">
+										<span class="language-cn active">中文</span>
+										<span>|</span>
+										<span class="language-en">EN</span>
 									</div>
 								</div>
 							</nav>
