--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/aos.css">
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 
 </head>
 
@@ -64,14 +65,10 @@
                                         <li><a href="#knowledge">知识论坛</a></li>
                                         <li><a href="#contact">联系我们</a></li>
                                     </ul>
-                                    <button id="btnGroupDrop1" type="button"
-                                        class="btn btn-light btn-sm dropdown-toggle" data-toggle="dropdown"
-                                        aria-haspopup="true" aria-expanded="false">
-                                        🇨🇳中文
-                                    </button>
-                                    <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                                        <a class="dropdown-item language-cn" href="#">🇨🇳 中文</a>
-                                        <a class="dropdown-item language-en" href="#">🇬🇧 Enlish</a>
+                                    <div class="setting-language">
+                                        <span class="language-cn active">中文</span>
+                                        <span>|</span>
+                                        <span class="language-en">EN</span>
                                     </div>
                                 </div>
                             </nav>
