--- a/index.html
+++ b/index.html
@@ -197,22 +197,28 @@
                     <div class="col-md-12 block-13 nav-direction-white">
                         <div class="nonloop-block-13 owl-carousel">
                             <div class="media-image">
-                                <img src="images/trust.jpg" alt="Image" class="img-fluid">
-                                <div class="media-image-body media-image-body1">
-                                    <a href="product-tomato.html">
-                                        <h2 class="font-secondary text-uppercase">番茄红素</h2>
-                                    </a>
-                                    <p>以海洋鱼类中提取的鱼油为原料，采用挪威PronovaPure高含量鱼油经过先进工艺精制而成。含有的人体必需Omega-3系多不饱和脂肪酸EPA和 DHA</p>
-                                </div>
+                                <a href="product-tomato.html">
+                                    <img src="images/trust.jpg" alt="Image" class="img-fluid">
+                                    <div class="media-image-body media-image-body1">
+                                        <a href="product-tomato.html">
+                                            <h2 class="font-secondary text-uppercase">番茄红素</h2>
+                                        </a>
+                                        <p>以海洋鱼类中提取的鱼油为原料，采用挪威PronovaPure高含量鱼油经过先进工艺精制而成。含有的人体必需Omega-3系多不饱和脂肪酸EPA和 DHA
+                                        </p>
+                                    </div>
+                                </a>
                             </div>
                             <div class="media-image">
-                                <img src="images/teamwork.jpg" alt="Image" class="img-fluid">
-                                <div class="media-image-body media-image-body2">
-                                    <a href="product-fish.html">
-                                        <h2 class="font-secondary text-uppercase">百家康牌鱼油胶囊</h2>
-                                    </a>
-                                    <p>以海洋鱼类中提取的鱼油为原料，采用挪威PronovaPure高含量鱼油经过先进工艺精制而成。含有的人体必需Omega-3系多不饱和脂肪酸EPA和 DHA</p>
-                                </div>
+                                <a href="product-fish.html">
+                                    <img src="images/teamwork.jpg" alt="Image" class="img-fluid">
+                                    <div class="media-image-body media-image-body2">
+                                        <a href="product-fish.html">
+                                            <h2 class="font-secondary text-uppercase">百家康牌鱼油胶囊</h2>
+                                        </a>
+                                        <p>以海洋鱼类中提取的鱼油为原料，采用挪威PronovaPure高含量鱼油经过先进工艺精制而成。含有的人体必需Omega-3系多不饱和脂肪酸EPA和 DHA
+                                        </p>
+                                    </div>
+                                </a>>
                             </div>
                             <!--                        <div class="media-image">-->
                             <!--                            <img src="images/innovation.jpg" alt="Image" class="img-fluid">-->
@@ -223,13 +229,15 @@
                             <!--                            </div>-->
                             <!--                        </div>-->
                             <div class="media-image">
-                                <img src="images/respect.jpg" alt="Image" class="img-fluid">
-                                <div class="media-image-body media-image-body3">
-                                    <a href="product-suger.html">
-                                        <h2 class="font-secondary text-uppercase">姜黄素爆汁软糖</h2>
-                                    </a>
-                                    <p>姜黄植物来自东南亚，已有数千年的历史，被用作天然的消化助剂和烹饪香料。像姜一样，它来自姜科，它的健康益处来自其根。</p>
-                                </div>
+                                <a href="product-suger.html">
+                                    <img src="images/respect.jpg" alt="Image" class="img-fluid">
+                                    <div class="media-image-body media-image-body3">
+                                        <a href="product-suger.html">
+                                            <h2 class="font-secondary text-uppercase">姜黄素爆汁软糖</h2>
+                                        </a>
+                                        <p>姜黄植物来自东南亚，已有数千年的历史，被用作天然的消化助剂和烹饪香料。像姜一样，它来自姜科，它的健康益处来自其根。</p>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
