--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 data-aos="fade" data-stellar-background-ratio="0.5">
                 <div class="container">
                     <div class="row">
-                        <div style=" margin-left: 65px; margin-top: 20%" class="puthealthbanner2">
+                        <div class="puthealthbanner2 main_page_dream">
                             <h2 class="puthealthbanner2-box" style="color: white; font-size: 45px; letter-spacing:10px">
                                 <span class="puthealthbanner2-desc desc1">满怀理想</span>
                                 <br />
@@ -218,7 +218,7 @@
                                         <p>以海洋鱼类中提取的鱼油为原料，采用挪威PronovaPure高含量鱼油经过先进工艺精制而成。含有的人体必需Omega-3系多不饱和脂肪酸EPA和 DHA
                                         </p>
                                     </div>
-                                </a>>
+                                </a>
                             </div>
                             <!--                        <div class="media-image">-->
                             <!--                            <img src="images/innovation.jpg" alt="Image" class="img-fluid">-->
