--- a/index.html
+++ b/index.html
@@ -52,10 +52,42 @@
             <div class="container">
                 <div class="site-navbar bg-light">
                     <div class="row align-items-center">
-                        <div class=" logo_lyne">
+                        <!-- mobile-menu -->
+                        <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+                            <div class="container">
+                                <div class="navbar-header">
+                                    <a class="navbar-brand" href="#">
+                                        <div class=" logo_lyne">
+                                            <img src="images/logo-small.jpg" alt="Image" class="img-fluid">
+                                        </div>
+                                    </a>
+                                    <button style="border:none" type="button" class="navbar-toggle"
+                                        data-toggle="collapse" data-target=".navbar-collapse">
+                                        <img width="20" src="images/hamburger-menu.png" alt="Image" class="img-fluid">
+                                    </button>
+                                </div>
+                                <div class="collapse navbar-collapse">
+                                    <ul class="nav navbar-nav site-menu">
+                                        <li class="active"><a href="#home">首页</a></li>
+                                        <li><a href="#about">关于我们</a></li>
+                                        <li><a href="#product">产品简介</a></li>
+                                        <li><a href="#knowledge">知识论坛</a></li>
+                                        <li><a href="#contact">联系我们</a></li>
+                                    </ul>
+                                    <div class="setting-language">
+                                        <span class="language-cn active">中文</span>
+                                        <span>|</span>
+                                        <span class="language-en">EN</span>
+                                    </div>
+                                </div><!-- /.nav-collapse -->
+                            </div><!-- /.container -->
+                        </div>
+                        <!-- mobile-menu -->
+
+                        <div class=" logo_lyne web_menu">
                             <img src="images/logo-small.jpg" alt="Image" class="img-fluid">
                         </div>
-                        <div class="col-10">
+                        <div class="col-10 web_menu">
                             <nav class="site-navigation text-right" role="navigation">
                                 <div class="container">
                                     <ul class="site-menu">
