--- a/product-fish.html
+++ b/product-fish.html
@@ -56,12 +56,43 @@
             <div class="container">
                 <div class="site-navbar bg-light">
                     <div class="row align-items-center">
-                        <div class="col-2" style="margin-bottom: 20px; margin-top: 20px ">
+                        <!-- mobile-menu -->
+                        <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+                            <div class="container">
+                                <div class="navbar-header">
+                                    <a class="navbar-brand" href="index.html#home">
+                                        <div class=" logo_lyne">
+                                            <img src="images/logo-small.jpg" alt="Image" class="img-fluid">
+                                        </div>
+                                    </a>
+                                    <button style="border:none" type="button" class="navbar-toggle"
+                                        data-toggle="collapse" data-target=".navbar-collapse">
+                                        <img width="20" src="images/hamburger-menu.png" alt="Image" class="img-fluid">
+                                    </button>
+                                </div>
+                                <div class="collapse navbar-collapse">
+                                    <ul class="nav navbar-nav site-menu">
+                                        <li><a href="index.html">首页</a></li>
+                                        <li><a href="index.html#about">关于我们</a></li>
+                                        <li class="active"><a href="index.html#product">产品简介</a></li>
+                                        <li><a href="index.html#knowledge">知识论坛</a></li>
+                                        <li><a href="index.html#contact">联系我们</a></li>
+                                    </ul>
+                                    <div class="setting-language">
+                                        <span class="language-cn active">中文</span>
+                                        <span>|</span>
+                                        <span class="language-en">EN</span>
+                                    </div>
+                                </div><!-- /.nav-collapse -->
+                            </div><!-- /.container -->
+                        </div>
+                        <!-- mobile-menu -->
+                        <div class="col-2 web_menu" style="margin-bottom: 20px; margin-top: 20px ">
                             <a href="index.html#home"><img src="images/logo-small.jpg" alt="Image"
                                     class="img-fluid"></a>
                             <!--              <h2 class="mb-0 site-logo"><a href="index.html" class="font-weight-bold text-uppercase">Lyne Chemicals</a></h2>-->
                         </div>
-                        <div class="col-10">
+                        <div class="col-10 web_menu">
                             <nav class="site-navigation text-right" role="navigation">
                                 <div class="container">
                                     <ul class="site-menu">
@@ -259,6 +290,14 @@
         } else {
             getlanguageJson("./language/products_fish_cn.json", translateProductsPages);
         }
+        $(".language-cn").on("click", function () {
+            getlanguageJson("./language/products_fish_cn.json", translateProductsPages);
+
+        });
+        $(".language-en").on("click", function () {
+            getlanguageJson("./language/products_fish_en.json", translateProductsPages);
+
+        });
     </script>
 
 </body>
