fix(index):标题若影若现

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <div class="module-inner not-animated container" data-animate="fadeInUp" data-delay="200">
                 <div class="page-width">
                     <div class="row mb-5">
-                        <div class="col-md-12 text-center" data-aos="fade" id="service">
+                        <div class="col-md-12 text-center" id="service">
                             <span class="caption d-block mb-2 font-secondary font-weight-bold">新闻&讨论</span>
                             <h2 class="site-section-heading text-uppercase text-center font-secondary">知识论坛</h2>
                         </div>
@@ -377,7 +377,7 @@
         <div id="contact">
             <div class="container">
                 <div class="row mb-5">
-                    <div class="col-md-12 title" data-aos="fade">
+                    <div class="col-md-12 title">
                         <h2 class="site-section-heading text-center text-uppercase">联系我们</h2>
                     </div>
                 </div>
