--- a/product-fish.html
+++ b/product-fish.html
@@ -160,6 +160,16 @@
                                         <img src="images/teamwork.jpg" alt="Image" class="img-fluid">
                                     </a>
                                 </div>
+                                <div class="swiper-slide">
+                                    <a href="images/fish-instructions.png" data-imagelightbox="b">
+                                        <img src="images/fish-instructions.png" alt="Image" class="img-fluid">
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="images/fish-report.png" data-imagelightbox="b">
+                                        <img src="images/fish-report.png" alt="Image" class="img-fluid">
+                                    </a>
+                                </div>
                             </div>
                             <div class="swiper-button-prev  swiper-button-black"></div>
                             <!--左箭头。如果放置在swiper-container外面，需要自定义样式。-->
@@ -169,7 +179,7 @@
                         </div>
                     </div>
                     <div class="product-instructions">
-                        <p
+                        <p class="site-section-heading-title"
                             style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 18px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 800; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
                             配料：</p>
                         <p
@@ -179,19 +189,19 @@
                             style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
                             鱼油
                         </p>
-                        <p
+                        <p class="site-section-heading-title"
                             style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 18px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 800; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
                             食用方式及食用量：</p>
                         <p
                             style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
                             每日2粒，早晚空腹服用。</p>
-                        <p
+                        <p class="site-section-heading-title"
                             style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 18px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 800; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
                             本产品不含有：</p>
                         <p
                             style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
                             不含人造色素，调味剂或甜味剂。无防腐剂。不添加糖或盐。没有淀粉，没有玉米，没有牛奶，没有乳糖，没有大豆，没有麸质，没有小麦，没有酵母，没有猪产品。</p>
-                        <p
+                        <p class="site-section-heading-title"
                             style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 18px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 800; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">
                             注意事项：</p>
                         <p
