--- a/product-suger.html
+++ b/product-suger.html
@@ -36,8 +36,8 @@
 
 	<div id="overlayer"></div>
 <!--	<div class="loader">-->
-<!--<div id="overlayer"></div>-->
-<!-- 	<div class="loader">
+	<!--<div id="overlayer"></div>-->
+	<!-- 	<div class="loader">
 		<div class="spinner-border text-primary" role="status">
 			<span class="sr-only">Loading...</span>
 		</div>
@@ -163,6 +163,11 @@
 								<div class="swiper-slide">
 									<a href="images/respect.jpg" data-imagelightbox="b">
 										<img src="images/respect.jpg" alt="Image" class="img-fluid">
+									</a>
+								</div>
+								<div class="swiper-slide">
+									<a href="images/sugar-report.png" data-imagelightbox="b">
+										<img src="images/sugar-report.png" alt="Image" class="img-fluid">
 									</a>
 								</div>
 							</div>
