fix(product-fish):修复轮播图 图片尺寸比例不一致问题

--- a/product-fish.html
+++ b/product-fish.html
@@ -155,12 +155,12 @@
                     <div class="product-swiper">
                         <div class="swiper-container" id="swiper-tomato">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide">
+                                <div class="swiper-slide" style="height: 600px;display: flex;align-items: center;">
                                     <a href="images/teamwork.jpg" data-imagelightbox="b">
                                         <img src="images/teamwork.jpg" alt="Image" class="img-fluid">
                                     </a>
                                 </div>
-                                <div class="swiper-slide">
+                                <div class="swiper-slide" style="height: 600px;display: flex;align-items: center;">
                                     <a href="images/fish-instructions.png" data-imagelightbox="b">
                                         <img src="images/fish-instructions.png" alt="Image" class="img-fluid">
                                     </a>
