--- a/product-fish.html
+++ b/product-fish.html
@@ -114,9 +114,10 @@
                 </div>
             </div>
         </div>
-        <div class="site-blocks-cover inner-page overlay" style="background-image: url(images/product_fish.jpg);"
-            data-aos="fade" data-stellar-background-ratio="0.5">
-            <div class="row align-items-center justify-content-center">
+        <div class="site-blocks-cover inner-page overlay"
+            style="background-image: url(images/product_fish.jpg); height: 450px;" data-aos="fade"
+            data-stellar-background-ratio="0.5">
+            <div class="row align-items-center justify-content-center custom-banner">
                 <div class="col-md-7 text-center product-banner" data-aos="fade">
                     <h1 class="text-uppercase">百家康鱼油</h1>
                     <span class="caption d-block text-white">普特健康</span>
